--- a/app/templates/admin/settings.html
+++ b/app/templates/admin/settings.html
@@ -17,13 +17,13 @@
                         <a href="{{ url_for('admin.dashboard') }}" class="nav-link">
                             <i class="fas fa-tachometer-alt me-2"></i> Dashboard
                         </a>
-                        <a href="{{ url_for('admin.user_list') }}" class="nav-link">
+                        <a href="{{ url_for('admin.users') }}" class="nav-link">
                             <i class="fas fa-users me-2"></i> Users
                         </a>
                         <a href="{{ url_for('admin.instructor_list') }}" class="nav-link">
                             <i class="fas fa-chalkboard-teacher me-2"></i> Instructors
                         </a>
-                        <a href="{{ url_for('admin.aircraft_list') }}" class="nav-link">
+                        <a href="{{ url_for('admin.aircraft') }}" class="nav-link">
                             <i class="fas fa-plane me-2"></i> Aircraft
                         </a>
                         <a href="{{ url_for('admin.schedule') }}" class="nav-link">
