--- a/app/templates/booking/calendar_settings.html
+++ b/app/templates/booking/calendar_settings.html
@@ -62,8 +62,8 @@
                         <li>All your flight bookings will be added to your Google Calendar</li>
                         <li>Each booking will include:
                             <ul>
-                                <li>Aircraft information</li>
-                                <li>Instructor details (if applicable)</li>
+                                <li>Aircraft information ({{ aircraft.display_name }})</li>
+                                <li>Instructor details (if applicable, {{ instructor.full_name }})</li>
                                 <li>Booking status</li>
                             </ul>
                         </li>
