--- a/app/templates/admin/audit_logs.html
+++ b/app/templates/admin/audit_logs.html
@@ -20,7 +20,7 @@
                     <tbody>
                         {% for log in logs %}
                         <tr>
-                            <td>{{ log.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                            <td>{{ log.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                             <td>{{ log.user.full_name }}</td>
                             <td>{{ log.action }}</td>
                             <td>{{ log.table_name }}</td>
